--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
-		"postcss": "^8.4.23",
+		"gh-pages": "^6.2.0",
+		"postcss": "^8.4.47",
 		"tailwindcss": "^3.3.2",
-		"vite": "^4.3.2"
+		"vite": "^4.5.5"
 	}
 }
