--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
 	"name": "3d_portfolio",
 	"private": true,
+	"homepage": " https://afoghandi.github.io/3d_portfolio/",
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		 "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
