--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"build": "vite build",
 		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		 "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
@@ -36,7 +36,9 @@
 		"eslint-plugin-react-refresh": "^0.3.4",
 		"gh-pages": "^6.2.0",
 		"postcss": "^8.4.47",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"tailwindcss": "^3.3.2",
-		"vite": "^4.5.5"
+		"vite": "^4.5.5",
+		"vite-plugin-imagemin": "^0.6.1"
 	}
 }
